--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^6.4.4",
     "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
     "nuka-carousel": "^6.0.3",
@@ -23,7 +26,6 @@
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
     "react-transition-group": "^4.4.5",
-  
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
